fixed price blockes

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1379,6 +1379,84 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "178ba079": {
+          "id": "178ba079",
+          "path": "img/offers/Audi/audi_1.jpg",
+          "output": "img/offers/Audi/audi_1.jpg",
+          "name": "audi_1.jpg",
+          "category": "IMAGE",
+          "size": 102435,
+          "type": "jpg",
+          "initialSize": 102435,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a83d610d": {
+          "id": "a83d610d",
+          "path": "img/offers/Audi/audi_2.jpg",
+          "output": "img/offers/Audi/audi_2.jpg",
+          "name": "audi_2.jpg",
+          "category": "IMAGE",
+          "size": 146594,
+          "type": "jpg",
+          "initialSize": 146594,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "10d1639b": {
+          "id": "10d1639b",
+          "path": "img/offers/Audi/audi_3.jpg",
+          "output": "img/offers/Audi/audi_3.jpg",
+          "name": "audi_3.jpg",
+          "category": "IMAGE",
+          "size": 41282,
+          "type": "jpg",
+          "initialSize": 41282,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "39159ec9": {
+          "id": "39159ec9",
+          "path": "img/offers/Audi/audi_4.jpg",
+          "output": "img/offers/Audi/audi_4.jpg",
+          "name": "audi_4.jpg",
+          "category": "IMAGE",
+          "size": 25260,
+          "type": "jpg",
+          "initialSize": 25260,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9d31fcdb": {
+          "id": "9d31fcdb",
+          "path": "img/offers/Audi/audi_5.jpg",
+          "output": "img/offers/Audi/audi_5.jpg",
+          "name": "audi_5.jpg",
+          "category": "IMAGE",
+          "size": 182627,
+          "type": "jpg",
+          "initialSize": 182627,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "878063a4": {
+          "id": "878063a4",
+          "path": "img/offers/Audi/audi_6.jpg",
+          "output": "img/offers/Audi/audi_6.jpg",
+          "name": "audi_6.jpg",
+          "category": "IMAGE",
+          "size": 76003,
+          "type": "jpg",
+          "initialSize": 76003,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
